[package]
name = "davy-jones-locker"
version = "0.1.0"
edition = "2021"

[dependencies]
libsecret = "0.5.0"
aes-gcm = "0.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0.132"
getrandom = "0.2.15"
